[pom] Move error prone back to normal configuration and add jdk 16+ support